tests/tooling/fixtures/native/recovery/positive/main_bool_entrypoint.objc3
// Positive fixture: bool main entrypoint ABI bridge lowers to i32 return in objc3c_entry.
module MainBoolEntrypoint;

fn main() -> bool {
  return true;
}
